# greeting-clean-arch

./: .env.dev.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: main.py
app/adapters/controllers/: info_controller.py  items_controller.py
app/config/: __init__.py  app_config.py
app/infra/db/redis/: __init__.py  database.py
app/infra/web/: router.py
scripts/: run.sh  test.sh
test/: test_api.py
